# trading

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPMENT_PLAN.md  Makefile  PRODUCT_SPEC.md  README.md  RISK_POLICY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: check.yml
alembic/: env.py
alembic/versions/: 20260627_0001_market_data_spine.py  20260627_0002_ingestion_run_limit.py  20260627_0003_pit_replay_index.py  20260627_0004_trades.py  20260627_0005_order_book_snapshots.py  20260627_0006_derivatives_metrics.py  20260627_0007_backtest_runs.py  20260627_0008_backtest_artifacts.py  20260627_0009_backtest_run_dataset_lineage.py  20260627_0010_backtest_run_events.py  20260627_0011_ai_signal_contracts.py  20260627_0012_feature_sets.py  20260627_0013_model_experiment_spine.py  20260628_0014_prediction_label_contract.py
scripts/: verify_data_spine.py
src/trading/: __init__.py
tests/: test_agent_signal_contracts.py  test_api.py  test_api_agent_signals.py  test_api_backtests.py  test_api_datasets.py  test_api_feature_sets.py  test_api_ingestion.py  test_api_model_experiments.py  test_archive.py  test_backtest_runs.py  test_backtesting.py  test_feature_sets.py  test_import_boundaries.py  test_ingestion_worker.py  test_market_data.py  test_model_experiments.py  test_offline_dataset.py  test_provider_registry.py  test_public_adapter.py  test_risk_decisions.py  test_settings_safety.py
tests/integration/: test_ai_signal_contracts_db.py  test_backtest_runs_db.py  test_data_spine_db.py  test_feature_sets_db.py  (+1 more)
(+66 files in other folders)
