[project]
name = "trading"
version = "0.1.0"
description = "Paper-first crypto AI trading research platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.2",
    "ccxt==4.5.28",
    "fastapi==0.128.0",
    "psycopg==3.3.2",
    "pyarrow==22.0.0",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.45",
    "structlog==25.5.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "ruff==0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/trading/core/settings.py" = ["S105"]
"tests/test_api.py" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["trading"]

[[tool.mypy.overrides]]
module = ["ccxt.*", "pyarrow.*", "pyarrow"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires Docker-backed services",
]
